--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "google-auth-library": "^10.4.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^12.0.0"
+    "mssql": "^12.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
